[gd_scene load_steps=4 format=3 uid="uid://l1yhjgh8cnxg"]

[ext_resource type="Script" path="res://Scripts/UI/PlacementContext.gd" id="1_k0r3l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2c5n4"]
bg_color = Color(0, 0, 0, 0.227451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.639216)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_u8stq"]
Panel/styles/panel = SubResource("StyleBoxFlat_2c5n4")

[node name="PlacementContext" type="Panel"]
offset_right = 206.0
offset_bottom = 139.0
theme = SubResource("Theme_u8stq")
script = ExtResource("1_k0r3l")

[node name="PlacementContext" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 133.0

[node name="Label" type="Label" parent="PlacementContext"]
layout_mode = 2
text = "Object: Bush 22"

[node name="MoveButton" type="Button" parent="PlacementContext"]
layout_mode = 2
text = "Move"

[node name="DeleteButton" type="Button" parent="PlacementContext"]
layout_mode = 2
text = "Delete"

[node name="CancelButton" type="Button" parent="PlacementContext"]
layout_mode = 2
text = "Cancel"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="PlacementContext/MoveButton" to="." method="_on_move_button_button_up"]
[connection signal="button_up" from="PlacementContext/DeleteButton" to="." method="_on_delete_button_button_up"]
[connection signal="button_up" from="PlacementContext/CancelButton" to="." method="_on_cancel_button_button_up"]
